0.05
 - Fix test of run on Windows.

0.04 2022-01-06T15:12:35+01:00
 - Fix hardcoded relative path in test.
 - Update copyright years.

0.03 2021-10-31T11:25:12+01:00
 - Add test for constructor.
 - Add test for run with help.
 - Fix Makefile.PL which fails with no '.' in @INC.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - In run() don't exit, only return exit code.
 - Rewrite doc to =head2.
 - Update Module::Install to 1.19.
 - Update author github username.
 - Update author name.
 - Update copyright years.

0.02 2016-04-04T15:20:27+02:00
 - Add LICENSE file.
 - Add support for jpg suffix.
 - Fix image type (JPG vs jpg suffix).
 - Update copyright years.

0.01 2015-11-12T16:02:38+01:00
 - First version.